# Live555-Overlay-Port

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  check-update.yml  check-updates.yml
ports/live555/: live555-download-url  live555-sha512  portfile.cmake
scripts/: download.sh
